# inmemory-auctioneer

./: Cargo.toml  README.md  architecture.d2
.github/workflows/: d2-diagrams.yml
docs/: FRP.md  workplan.md
docs/diagrams/: tee_integration.d2
src/: auctioneer.rs  bid.rs  lib.rs  main.rs
src/tests/: bid_test.rs
tests/: bid.rs
